--- a/style.css
+++ b/style.css
@@ -1,16 +1,74 @@
+/*All*/
+/*https://webdesign-trends.net/entry/8148*/
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: #e2f4de;
-  color: #50976a;
+  color: #1d1d1f;
 }
-header {
 
+/*navigation bar*/
+nav {
+  width: 100vw;
+  height: 48px;
+  position: fixed;
+  display: block;
+  top: 0;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.92);
+  font-size: 17px;
+  user-select: none;
 }
-footer {
 
-}
+/*Common Section*/
 section {
 
 }
+
+/*home content*/
+#home {
+  width: 100%;
+  height: 690px;
+  position: relative;
+  overflow: hidden;
+  justify-content: center;
+}
+.home-bigimage {
+  background-size: 736px 690px;
+  background-repeat: no-repeat;
+  background-image: ;
+}
+.home-var {
+  top: 213px;
+  display: block;
+  width: 250px;
+  height: 50px;
+}
+
+/*about*/
+#about {
+  position: relative;
+  z-index: 2;
+  padding-bottom: 200px;
+  justify-content: center;
+}
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  max-width: 100%;
+}
+
+/*Footer*/
+footer {
+
+}
+
 /*Fonts*/
 h1 {
   font-family: a-otf-ud-shin-go-pr6n, sans-serif;
@@ -38,3 +96,20 @@ p {
   font-size: 14px;
 }
 /*デザインの参考はApple公式サイトを参照のこと：https://www.apple.com/jp/iphone-12/*/
+
+/*
+font-family: a-otf-gothic-bbb-pr6n,sans-serif;
+font-weight: 400;
+font-style: normal;
+
+font-family: a-otf-futo-go-b101-pr6n,sans-serif;
+font-weight: 500;
+font-style: normal;
+
+font-family: a-otf-ud-shin-go-pr6n, sans-serif;
+font-weight: 300;
+font-style: normal;
+*/
+@media only screen and (max-width: 734px) {
+
+}
