--- a/style.css
+++ b/style.css
@@ -15,13 +15,19 @@
   src: url(fonts/SF-Pro-Text-Semibold.otf);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  color: #1d1d1f;
+  font-family: "SF Pro Text S", "Helvetica Neue","Helvetica","Arial", sans-serif;
+}
+
 body {
   background: #e2f4de;
   color: #1d1d1f;
   font-size: 17px;
   line-height: 1.47059;
   letter-spacing: -.022em;
-  font-family: "SF Pro Text R", "Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: "SF Pro Text R", "Helvetica Neue","Helvetica","Arial", sans-serif;
   font-style: normal;
   text-align: center;
 }
@@ -80,36 +86,76 @@ section {
 .title-container {
   position: relative;
   z-index: 3;
-  padding: 180px 0;
+  padding: 80px 0 130px 0;
   background: #fff;
   border-radius: 30px 30px;
   overflow: hidden;
   margin-top: 30px;
   will-change: transform;
 }
+.tile {
+  text-align: center;
+}
+.tile:not(:first-child) {
+  margin-top: 100px;
+}
+.image-container {
+  margin-top: .8em;
+  margin-bottom: 32px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  will-change: transform;
+}
+img {
+  object-fit: cover;
+  align-items: center;
+}
+.section-content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 87.5%;
+}
+.subhead {
+  max-width: 320px;
+  margin-bottom: 30px;
+  color: #86868b;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 19px;
+}
+input {
+  padding: 12px 22px;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: 400;
+  font-family: "SF Pro Text R","Helvetica Neue","Helvetica","Arial",sans-serif;
+  min-width: 28px;
+  background: #1d1d1f;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 980px;
+}
 
 /*Footer*/
 footer {
+  background-color: #1d1d1f;
+  color: #f5f5f7;
+  font-size: 12px;
+  font-weight: 400;
+  font-family: "SF Pro Text R", sans-serif;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
 
+}
+.footer-content {
+  padding: 34px 22px 21px 22px;
 }
 
 /*デザインの参考はApple公式サイトを参照のこと：https://www.apple.com/jp/iphone-12/*/
-
-@media only screen and (max-width: 734px) {
-  .title-container {
-    padding: 80px 0 130px 0;
-  }
-
-  .hero-content {
-    flex-basis: 100%;
-    max-width: 100%;
-  }
-
-}
-
-@media only screen and (max-width: 1068px) {
-  .title-container {
-    padding: 120px 0 180px 0;
-  }
-
-}
