--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background: #e2f4de;
+  background: #000;
   color: #1d1d1f;
   font-size: 17px;
   line-height: 1.47059;
@@ -51,35 +51,69 @@ section {
 }
 
 /*home content*/
-/*#home {
+.section-hero {
+  will-change: transform;
+}
+
+#home {
   width: 100%;
   height: 690px;
   position: relative;
   overflow: hidden;
   justify-content: center;
+  align-items: center;
 }
+
 .home-bigimage {
   background-size: 736px 690px;
   background-repeat: no-repeat;
-  background-image: ;
+  background-image: url(sample.jpg);
 }
 .home-var {
   top: 213px;
   display: block;
   width: 250px;
   height: 50px;
-}*/
+  color: #f5f5f7;
+  text-align: center;
+}
 /*about*/
 #about {
+  display: flex;
   position: relative;
   z-index: 2;
   padding-bottom: 200px;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
+  width: 100%
 }
 .hero-content {
   display: flex;
   flex-direction: column;
+  flex-basis: 100%;
+  max-width: 100%;
+  align-items: center;
+  color: #f5f5f7;
+}
 
+.hero-content h2 {
+  max-width: 310px;
+  min-width: 300px;
+  margin-bottom: 20px;
+  font-size: 48px;
+  line-height: 1.08349;
+  letter-spacing: -.003em;
+  color: #f5f5f7;
+}
+.hero-content h3 {
+  width: 78%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 19px;
+  line-height: 1.21053;
+  letter-spacing: .012em;
+  color: #f5f5f7;
 }
 
 /*title-container*/
@@ -147,7 +181,6 @@ footer {
   background-color: #1d1d1f;
   color: #f5f5f7;
   font-size: 12px;
-  font-weight: 400;
   font-family: "SF Pro Text R", sans-serif;
   overflow: hidden;
   position: relative;
@@ -156,6 +189,13 @@ footer {
 }
 .footer-content {
   padding: 34px 22px 21px 22px;
+}
+footer h4 {
+  color: #f5f5f7;
+  text-align: left;
+}
+.footer-copyright {
+  text-align: left;
 }
 
 /*デザインの参考はApple公式サイトを参照のこと：https://www.apple.com/jp/iphone-12/*/
