--- a/style.css
+++ b/style.css
@@ -32,23 +32,36 @@ body {
   text-align: center;
 }
 
-/*navigation bar*/
-nav {
-  width: 100vw;
-  height: 48px;
-  position: fixed;
-  display: block;
-  top: 0;
-  z-index: 9999;
-  background-color: rgba(0, 0, 0, 0.92);
-  font-size: 17px;
-  user-select: none;
-}
-
 /*Common Section*/
 section {
 
 }
+
+
+
+/*modal*/
+.modal {
+	background: rgba(8,8,8,0.9);
+	overflow: auto;
+	padding: 54px 0;
+	position: fixed;
+}
+.modal-open {
+	display: block;
+    z-index: 11000;
+}
+.content-table {
+	padding: 60px 50px;
+	background: #111;
+}
+.modal-content {
+	width: 100%;
+	height: 100%;
+}
+
+
+
+
 
 /*home content*/
 .section-hero {
@@ -68,14 +81,16 @@ section {
   background-size: 736px 690px;
   background-repeat: no-repeat;
   background-image: url(sample.jpg);
+  z-index: 1;
 }
 .home-var {
   top: 213px;
   display: block;
-  width: 250px;
+  width: 100vw;
   height: 50px;
   color: #f5f5f7;
   text-align: center;
+	z-index: 2;
 }
 /*about*/
 #about {
